# arcade

./: .gitignore  .gitignore~  CMakeLists.txt  Makefile  README.md
games/: Makefile
games/pacman/: ACharacter.cpp  ACharacter.hpp  Enemy.cpp  Enemy.hpp  PacmanGame.cpp  PacmanGame.hpp  entryPoint.cpp
games/solarfox/: Beam.cpp  Beam.hpp  Enemy.cpp  Enemy.hpp  Player.cpp  Player.hpp  SolarFoxGame.cpp  SolarFoxGame.hpp  entryPoint.cpp
include/Core/: Core.hpp  DLLoader.hpp  FileManager.hpp  Keys.hpp  LibsHandler.hpp  Menu.hpp
include/Game/: IGameLib.hpp
include/Graphic/: IGraphicLib.hpp
include/Utils/: Color.hpp  TextBox.hpp  Vect.hpp
lib/: Makefile
lib/ncurse/: NCursesGraphicLib.cpp  NCursesGraphicLib.hpp  entryPoint.cpp
lib/sdl2/: SDL2GraphicLib.cpp  SDL2GraphicLib.hpp  entryPoint.cpp
lib/sfml/: SFMLGraphicLib.cpp  SFMLGraphicLib.hpp  entryPoint.cpp
src/: Core.cpp  FileManager.cpp  Menu.cpp  main.cpp
utils/: Color.cpp  PixelBox.cpp  TextBox.cpp
